# rules_pkl

./: .gitattributes  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  release.yml  release_prep.sh
e2e/smoke/: BUILD  MODULE.bazel  WORKSPACE.bazel
pkl/: repositories.bzl  toolchain.bzl
pkl/private/: toolchains_repo.bzl  versions.bzl
pkl/tests/: versions_test.bzl
